--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Javascript Clock</title>
-    <link
-      href="https://allfont.net/allfont.css?fonts=agency-fb"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <title id="title">Javascript Clock</title>
+    <link href="https://fonts.cdnfonts.com/css/agency-fb" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body>
+  <body onload="loop()">
     <div class="day-container">
       <div class="sunday not-today">Sunday</div>
       <div class="monday not-today">Monday</div>
