--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="saturday not-today">Saturday</div>
     </div>
     <div class="date-container">
+      <span class="date-day"></span>
       <span class="date-number"></span>
       <span class="date-month"></span>
       <span class="date-year"></span>
